<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/homeFragment"
        android:icon="@drawable/ic_home"
        android:title="@string/nav_home" />

    <item
        android:id="@+id/exercisesFragment"
        android:icon="@drawable/ic_fitness_center"
        android:title="@string/nav_exercises" />

    <item
        android:id="@+id/workoutFragment"
        android:icon="@drawable/ic_play_arrow"
        android:title="@string/nav_workout" />

    <item
        android:id="@+id/statsFragment"
        android:icon="@drawable/ic_bar_chart"
        android:title="@string/nav_stats" />

    <item
        android:id="@+id/profileFragment"
        android:icon="@drawable/ic_person"
        android:title="@string/nav_profile" />

</menu>